--- a/Rapport/content/abstract.tex
+++ b/Rapport/content/abstract.tex
@@ -41,9 +41,9 @@ Furthermore, the performance of the system tracking a clay target in a English S
 The usefulness of the implemented digital controllers to the performance requirements
 of the application is discussed. Finally, options for further development of the system is discussed. 
 
-\todo[inline,author=Mikael]{Rewrite the lines below, so they match the actual conclusion when we have one.}
+%\todo[inline,author=Mikael]{Rewrite the lines below, so they match the actual conclusion when we have one.}
 It is concluded that the developed Pan \& Tilt System
-is able to accurately track the parabolic movement of the clay target while
+is not always able to accurately track the parabolic movement of the clay target while
 meeting the time requirements of the competition.
 
 %%%
