--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -164,7 +164,7 @@ Forbindes en modstand \(R_s\) i serie med DC-motoren som vist på figur \ref{fig
 %\begin{tikzpicture}[scale=2]
 %\include*{./graphics/}
 %\end{tikzpicture}
-\caption[]{FIGUR TEKST MANGLER}
+\caption[Rotationslåst motor med \(R_s\)]{Rotationslåst motor, i serie med en modstand \(R_s\).}
 \label{fig:eksperiment2metode1}
 \end{figure}
 
@@ -175,7 +175,7 @@ Transientresponsen for alle strømme og spændingsfald i kredsløbet har denne t
 	\tau=\frac{L_m}{R_m+R_s}
 	\label{eq:rltimeconstant} 
  \end{equation}
-Tidskonstanten er et mål for tiden det tager systemet at opnå \textbf{ca.??} 63,2 \% af slutværdien. For en (eksponentielt) aftagende kurve med tidskonstanten \(\tau\) kan tidskonstanten aflæses som
+Tidskonstanten er et mål for tiden det tager systemet at opnå ca. 63,2 \% af slutværdien. For en (eksponentielt) aftagende kurve med tidskonstanten \(\tau\) kan tidskonstanten aflæses som
 tidsforskellen mellem to niveauer \(V_0\) og \(V_1\), hvor \(V_1\) er ca. 36,8 \% af \(V_0\).
 
 Ved omskrivning af ligning \ref{eq:rltimeconstant} kan induktansen altså bestemmes vha. ligning \ref{eq:induktans0}.
@@ -188,7 +188,7 @@ Forhindres motoren i at rotere, vil vinkelhastigheden som beskrevet i afsnit \re
 Ved denne metode er vi interesseret i systemets steady-state respons.
 Forbindes en modstand \(R_{s1}\) i serie med DC-motoren som vist på figur ref{fig:eksperiment2metode2}
 vil impedansen \(\mathbf{Z_m}\) af DC-motoren være givet ved ligning \ref{eq:zm_0}.
-
+\todo[inline,author=Mikael]{Indsæt DC-offset \(V_{DC}\) i figur \ref{fig:eksperiment2metode2}.}
 \begin{figure}[!th]
 \centering
 \begin{circuitikz}
@@ -198,7 +198,7 @@ vil impedansen \(\mathbf{Z_m}\) af DC-motoren være givet ved ligning \ref{eq:zm
 %\begin{tikzpicture}[scale=2]
 %\include*{./graphics/}
 %\end{tikzpicture}
-\caption[]{MANGLER AT BLIVE TENGET - Indsæt kredsløbsdiagram med Rs1 og AC-forsyning med DC offset}
+\caption[Rotationslåst motor med \(R_s1\)]{Rotationslåst motor, i serie med en modstand \(R_s1\) og en AC-forsyning.}
 \label{fig:eksperiment2metode2}
 \end{figure}
 
