--- a/Rapport/content/application.tex
+++ b/Rapport/content/application.tex
@@ -3,7 +3,7 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 \part{Applikation}
-I denne del af rapporten beskrives i hvilken sammenhæng Pan \& Tilt Systemet (PTS) ønskes brugt. 
+Denne del af rapporten beskriver i hvilken sammenhæng Pan \& Tilt Systemet (PTS) ønskes brugt. 
 Applikationen analyseres og kravene til systemet fastlægges. 
 Sidst gives et overblik over blokopdelingen af det samlede system. 
 
