--- a/Rapport/content/indledning.tex
+++ b/Rapport/content/indledning.tex
@@ -1,14 +1,14 @@
 \section*{Indledning}
 Trackingsystemer spiller en stadig større rolle i vores hverdag og ses ofte i gadebilledet i form 
 af f.eks. overvågningskameraer.
-Fælles for mange af sådanne trackingsystemer er, at de bruger et pan \& tilt system til at følge deres mål. 
+Fælles for mange af sådanne trackingsystemer er, at de bruger et Pan \& Tilt-system til at følge deres mål. 
 
-I dette projekt udvikles et pan \& tilt trackingsystem, som følger en lerdues bevægelse i 
+I dette projekt udvikles et Pan \& Tilt-trackingsystem, som følger en lerdues bevægelse i 
 luften. For at udvikle et sådant system skal en passende regulator designes og implementeres
 på en mikrocontroller. 
 %Desuden skal kommunikation mellem pan \& tilt systemet og mikrocontrolleren oprettes.
-En FPGA  bruges til at holde læse systemets position og skrive ønsket PWM til motorerne. 
-Denne skal kunne kommunikere med microcontrolleren vha. en FPGA. 
+En FPGA  bruges til at læse systemets position og sende ønskede PWM-signaler til motorerne. 
+Denne skal kunne kommunikere med microcontrolleren vha. SPI.
 Projektet udføres i overensstemmelse med det tilhørende projektoplæg, der er vedlagt 
 som bilag.
-\todo[inline,color = pink, author= Mikkel]{1. forsøg på indledning. \\Michael: Har ændret lidt hist og her - mangler stadig lidt arbejde}
+\todo[inline,color = pink, author= Mikkel]{1. forsøg på indledning. \\Michael: Har ændret lidt hist og her - mangler stadig lidt arbejde.\\Mikael: ditto.}
