--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -1,12 +1,12 @@
 \section{Kravspecifikation}
 \label{sec:kravspecifikation}
-Kravene til systemet findes vha. reglerne for English Skeet \citep{ES_regler},
-samt det udleverede systems fysiske begrænsninger.
+Kravene til systemet findes vha. reglerne for English Skeet \citep{ES_regler}.
+%samt det udleverede systems fysiske begrænsninger.
 
 Lerduens bane beregnes vha. de i reglerne givne værdier for affyringspunkt (D), forventet nedslagspunkt (G)
 og "target crossing point" (TCS).
 %Med antagelsen om negligerbar luftmodstand kan en kasteparabel således udregnes ved interpolation af disse tre punkter.
-Lerduens parabel findes ved interpolation af disse tre punkter. Det antages at luftmodstanden er neglibar.
+Lerduens parabel findes ved interpolation af disse tre punkter. Det antages at luftmodstanden er negligerbar.
 %Kasteparablen er givet ved ligning \ref{eq:ks:vektorparabel3d}, med origo som angivet på figur \ref{fig:ES}.
 %\begin{equation}
 %Pos\left( t \right) = 
@@ -59,7 +59,7 @@ Punktet SB og punktet G er hhv. 40,3 [m] og 52 [m] fra "high house". \\
 	\include*{./graphics/parabola_in_xy_plane}
 	\end{tikzpicture}
 }
-\caption[Lerduens parabel i 2D]{Viser parablen af lerduens bane i 2D.}
+\caption[Lerduens parabel i 2D]{Viser parablen som udgør lerduens bane i 2D.}
 \label{fig:para_total}
 \end{figure}
 
