--- a/Rapport/graphics/digitalkontroller1.tex
+++ b/Rapport/graphics/digitalkontroller1.tex
@@ -35,8 +35,8 @@
 \coordinate[left of=output,xshift=-0.75cm,yshift=1.5cm](UR);
 \coordinate[left of=output,xshift=-0.75cm,yshift=-4.25cm](BR);
 \draw[dashed,color=red](UL)--(BL)--(BR)--(UR)--(UL);
-\node [right of= UL,xshift=-1cm,yshift=-0.25cm] (bla){Digital Controller};
+\node [right of= UL,xshift=-1cm,yshift=-0.25cm] (bla){Digital Regulator};
 \node [below of= AD2,xshift=0cm,yshift=1.8cm] (bla1){\scriptsize FPGA Encoder};
 
-\node [above of= Dz,xshift=0cm,yshift=-1.8cm] (bla1){\scriptsize Controller};
+\node [above of= Dz,xshift=0cm,yshift=-1.8cm] (bla1){\scriptsize Regulator};
 \node [above of= Dahold,xshift=0cm,yshift=-1.8cm] (bla1){\scriptsize FPGA PWM};
