--- a/Rapport/graphics/digitalkontroller2.tex
+++ b/Rapport/graphics/digitalkontroller2.tex
@@ -42,5 +42,5 @@
 
 \node [right of= UL,xshift=-1.75cm,yshift=-0.25cm] (bla){$H_{zoh}\left(z\right)$};
 \node [below of= AD2,xshift=0cm,yshift=1.8cm] (bla1){\scriptsize FPGA Encoder};
-\node [above of= Dz,xshift=0cm,yshift=-1.8cm] (bla1){\scriptsize Controller};
+\node [above of= Dz,xshift=0cm,yshift=-1.8cm] (bla1){\scriptsize Regulator};
 \node [above of= Dahold,xshift=0cm,yshift=-1.8cm] (bla1){\scriptsize FPGA PWM};
