--- a/Rapport/graphics/digitalkontroller3.tex
+++ b/Rapport/graphics/digitalkontroller3.tex
@@ -23,4 +23,4 @@
 \draw [-] (y) |-  (point);
 \draw [->] (point) -| node[pos=0.97,left] {\footnotesize -} (sum1);
 
-\node [above of= Dz,xshift=0cm,yshift=-1.8cm] (bla1){\scriptsize Controller};
+\node [above of= Dz,xshift=0cm,yshift=-1.8cm] (bla1){\scriptsize Regulator};
