--- a/Rapport/content/projekt_overblik.tex
+++ b/Rapport/content/projekt_overblik.tex
@@ -7,7 +7,7 @@ Projektoplægget stiller ydermere følgende krav til implementeringen:
 \begin{itemize}
 \itemsep1pt
   \item Regulatorerne skal implementeres på én mikroprocessor.
-  \item Der skal benyttes SPI kommunikationen imellem mikroprocessoren og FPGA’en.
+  \item Der skal benyttes SPI kommunikation mellem mikroprocessoren og FPGA’en.
   \item FPGA’en skal styre PWM-signalerne til motorerne.
   \item FPGA’en skal benyttes til bestemmelse af motorernes position vha. encoderne.
 \end{itemize}
@@ -19,7 +19,7 @@ Projektoplægget stiller ydermere følgende krav til implementeringen:
 \begin{tikzpicture}[auto, node distance=1cm,>=latex']
 \include*{./graphics/PTSoverview}
 \end{tikzpicture}
-\caption[Principskitse af PTS]{Principskitse af PTS med farvekoder.}
+\caption[Principskitse af PTS]{Principskitse af PTS.}
 \label{fig:overview_openloop_PTS}
 \end{figure}
 
