tilføjet dobbeltsidet margin til preamble

--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -5,7 +5,6 @@
 \usepackage[nottoc, numbib, notlot, notlof]{tocbibind}
 \usepackage{fancyhdr}
 \usepackage[utf8]{inputenc} 
-\usepackage[margin=2.5cm]{geometry}
 \usepackage{mathtools}
 \usepackage[danish]{babel}
 \usepackage[svgnames]{xcolor}
@@ -33,7 +32,10 @@
 \counterwithin{table}{section}
 \counterwithin{equation}{section}
 
-
+% Tosidet margin:
+%\usepackage[inner=3cm,outer=2cm]{geometry}
+% Enkeltsidet magin: 
+\usepackage[margin=2.5cm]{geometry}
 
 
 
